--- a/css/style.css
+++ b/css/style.css
@@ -80,20 +80,13 @@ body {
   top: 50%;
   left: 0;
   right: 0;
-  color: #FFF;
+  transform: translateY(-50%);
+  color: #ffe1ce;
   text-align: center;
-  font-family: "lato", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 300;
   font-size: 50px;
   letter-spacing: 10px;
-  margin-top: -60px;
-  padding-left: 10px;
-}
-
-#title span {
-  background: -webkit-linear-gradient(white, #38495a);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 @keyframes animStar {
